--- a/act327/cbgridstyle.css
+++ b/act327/cbgridstyle.css
@@ -19,6 +19,7 @@ body {
 }
 
 nav {
+  animation: transitionIn 1.5s;
   float: left;
   width: 100%;
   background-color: beige;
@@ -134,6 +135,7 @@ a {
 }
 
 h1 {
+  animation: transitionIn 1.5s;
   margin: 0;
   text-align: center;
   padding: 0;
@@ -152,6 +154,7 @@ h1 {
 }
 */
 .chessboard {
+  animation: transitionIn 3s;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(8, 8vh);
@@ -160,6 +163,17 @@ h1 {
   height: 64vh;
   width: 64vh;
   border: 1vh solid burlywood;
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: rotateX(-10deg);
+  }
+  to {
+    opacity: 1;
+    transform: rotateX(0);
+  }
 }
 
 img {
