--- a/act407/styles.css
+++ b/act407/styles.css
@@ -391,9 +391,9 @@ iframe {
 
   ul {
     position: block;
-    padding-right: 10vw;
+    width: 115vw;
     margin-top: 10rem;
-    background-color: rgba(207, 207, 207, 0.7);
+    background-color: rgba(207, 207, 207, 0.6);
   }
 
   #header #nav-bar {
