--- a/act0419/styles.css
+++ b/act0419/styles.css
@@ -134,9 +134,19 @@ footer {
   width: 5rem;
 }
 
+#name:focus {
+  outline: none;
+  border: none;
+}
+
 #mainfocus {
   min-width: 15rem;
   font-size: 1rem;
+}
+
+#mainfocus:focus {
+  outline: none;
+  border: none;
 }
 
 #newToDo {
@@ -149,6 +159,11 @@ footer {
   color: black;
   font-size: 1rem;
   width: 8rem;
+}
+
+#newToDo:focus {
+  border: none;
+  outline: none;
 }
 
 #confirmnewq {
