--- a/bankingapp/styles.css
+++ b/bankingapp/styles.css
@@ -129,6 +129,16 @@ a:hover {
   cursor: pointer;
 }
 
+#dashboard {
+  color: black;
+  text-decoration: none;
+}
+
+#dashboard:mouseover {
+  color: #9c9c9c;
+  cursor: pointer;
+}
+
 #menu_logo {
   position: absolute;
   max-width: 3rem;
@@ -424,6 +434,44 @@ label {
 }
 
 .userlistdiv {
+  padding-top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+/* DISPLAY EXPENSES MODAL */
+
+.displayExpensesModal {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+
+.opendisplayExpensesModal {
+  visibility: visible;
+  opacity: 1;
+}
+
+.displayExpensesModalContents {
+  width: 85%;
+  height: 80%;
+  padding-top: 10%;
+  background: #dace34;
+  border-radius: 30px;
+}
+
+.expensesdiv {
   padding-top: 10%;
   display: flex;
   flex-direction: column;
